--- a/BookingDotNet/Hotel/Hotel.csproj
+++ b/BookingDotNet/Hotel/Hotel.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HotelManagement\HotelManagement.csproj" />
+  </ItemGroup>
+
 </Project>
