--- a/BookingDotNet/StartUp/StartUp.csproj
+++ b/BookingDotNet/StartUp/StartUp.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HotelManagement\HotelManagement.csproj" />
+    <ProjectReference Include="..\UserManagement\UserManagement.csproj" />
     <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
