--- a/BookingDotNet/UserManagement/UserManagement.csproj
+++ b/BookingDotNet/UserManagement/UserManagement.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HotelManagement\HotelManagement.csproj" />
     <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
