--- a/BookingDotNet/Hotel/Hotel.csproj
+++ b/BookingDotNet/Hotel/Hotel.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\HotelManagement\HotelManagement.csproj" />
     <ProjectReference Include="..\UserManagement\UserManagement.csproj" />
   </ItemGroup>
