Folder structure for tests added to project

--- a/BookingDotNet/BookingDotNet.Tests/BookingDotNet.Tests.csproj
+++ b/BookingDotNet/BookingDotNet.Tests/BookingDotNet.Tests.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\Utility\Utility.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="HotelManagement.Tests\CommandsTests\CreatingTests\" />
+    <Folder Include="HotelManagement.Tests\CommandsTests\ListingTests\" />
+  </ItemGroup>
+
 </Project>
