--- a/BookingDotNet/BookingDotNet.Tests/BookingDotNet.Tests.csproj
+++ b/BookingDotNet/BookingDotNet.Tests/BookingDotNet.Tests.csproj
@@ -15,12 +15,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HotelManagement\HotelManagement.csproj" />
+    <ProjectReference Include="..\Hotel\Hotel.csproj" />
+    <ProjectReference Include="..\UserManagement\UserManagement.csproj" />
     <ProjectReference Include="..\Utility\Utility.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="HotelManagement.Tests\CommandsTests\CreatingTests\" />
-    <Folder Include="HotelManagement.Tests\CommandsTests\ListingTests\" />
   </ItemGroup>
 
 </Project>
